traefik_apigateway/resources/3-middleware-stripprefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-teamoci3
  namespace: apps
spec:
  stripPrefix:
    prefixes:
      - /teamoci3
