traefik_apigateway/resources/4-middleware-jwt.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-jwt-authentication
  namespace: apps
spec:
  plugin:
    jwt:
      jwksUrl: https://idcs-5ba32fa3496f48289532f8fc10f47032.identity.oraclecloud.com/admin/v1/SigningCert/jwk
      forwardAuthorization: true
